api changes